UX: fix alignment

--- a/app/assets/stylesheets/mobile/compose.scss
+++ b/app/assets/stylesheets/mobile/compose.scss
@@ -206,7 +206,7 @@
     }
 
     .mini-tag-chooser {
-      margin: 0 0 8px 6px;
+      margin: 0 0 6px 6px;
       max-width: calc(50% - 3px);
     }
 
@@ -217,10 +217,6 @@
           font-size: var(--font-0);
         }
       }
-    }
-
-    .formatted-selection {
-      font-size: var(--font-down-1);
     }
   }
 
